--- a/stage.html
+++ b/stage.html
@@ -9,7 +9,7 @@
       border: 1px dotted #ddd;
     }
 
-    td {
+    td, ul {
       border: 1px solid #ddd;
     }
 
@@ -27,133 +27,56 @@
 
 <script src="build/mekong.js"></script>
 <script>
-  var Mekong = require('mekong').default();
-  Mekong.useEntity('List');
-  Mekong.useEntity({ Image: function(core) {} });
+  var Mekong = require('mekong').default;
+  var mekong = new Mekong(document.getElementById('body'));
 
-  //console.log(Mekong);
-  var list = Mekong.entity('List', { tag: 'ol' });
-  var item1 = list.addItem('item 1');
-  var item1_1 = item1.addItem('item 1.1');
-  var item2 = list.addItem('item 2');
-  var item1_2 = item1.addItem('item 1.2');
+  mekong.useEntity('Root');
+  mekong.useEntity('Table');
+  mekong.useEntity('Paragraph');
+  mekong.useEntity('List');
+  mekong.useEntity({ Image: function(core) {} });
 
-  console.log(list);
+  // A List
+  /*var list = mekong.entity('List', { tag: 'ol' });
+  var item1 = list.addItem({ text: 'item 1' });
 
-  /*var root = new Mekong.Entity.Root({ as: document.getElementById('body') });
-  var list = new Mekong.Entity.List({ tag: 'ol' });
-  root.appendEntity(list);
+  var item1_1 = item1.addItem({ text: 'item 1.1' });
+  var item2 = list.addItem({ text: 'item 2' });
+  var item1_2 = item1.addItem({ text: 'item 1.2' });
+  var item1_3 = item1.addItem({ text: 'item 1.3' });
 
-  list.setRepresentation({
-    tag: 'ul',
-    attrs: {},
-    items: [
-      { text: 'item 1', id: '1', markup: [], attrs: {} },
-      {
-        text: 'item 2',
-        id: '2'
-        items: [
-          { text: 'item 2.1', id: '2.1' },
-          { text: 'item 2.2', id: '2.2' },
-          { text: 'item 2.3', id: '2.3' },
-        ]
-      },
-      { text: 'item 3', id: '3' }
-    ];
-  });
+  item1.update({ text: 'lol' });
+  item1_3.remove();
+  console.log(list.state)*/
+  // A Table
+  /*var table = mekong.entity('Table');
+  var row1 = table.addRow();
 
-  var item1 = list.addItem('item 1');
-  var item1_1 = item1.addItem('item 1.1');
-  var item2 = list.addItem('item 2');
-  var item1_2 = item1.addItem('item 1.2');*/
+  column1 = row1.addColumn('text 1', {}, [])
+  column2 = row1.addColumn('text 2', {}, [])
+  column3 = row1.addColumn('text 3', {}, [])
+
+  column2.update({ text: 'lol' });
+  column3.remove();*/
+
+  // A paragraph
+  var paragraph = mekong.entity('Paragraph', { tag: 'blockquote', attrs: {} });
+
+  paragraph.update({ text: 'Hello world!' })
+  paragraph.update({ attrs: { id: 'saintp', class: ['parag', 'parag1'] } })
+  paragraph.update({ text: 'Y', start: 0, end: 1 })
+  paragraph.update({ tag: 'pre' })
+  paragraph.update({ markup: [ ['strong', 0, 5] ] })
+  paragraph.update({ markup: [ ['em', 3, 9] ] })
+  paragraph.update({ attrs: { class: 'paragz' } }) // атрибуты надо мерджить тож
+  paragraph.update({ tag: 'blockquote' })
+
+  console.log(paragraph.history)
+  paragraph.undo();
+  //paragraph.remove()
+  ////////////////////////////////////////////////////////
   /*
-  var paragraph1 = new Mekong.Entity.Paragraph({ text: 'fuckoff' });
-  var paragraph = new Mekong.Entity.Paragraph({ text: 'hello' });
 
-  // TODO
-  paragraph.setText('text')
-  paragraph.setMarkup('strong', 0, 5)
-
-  // Вот в этот момент и будет происходить рендеринг
-  root.appendEntity(paragraph1);
-  root.appendEntity(paragraph);
-
-  // List
-  var list1 = new Mekong.Entity.List({ tag: 'ol' });
-  var item1 = new Mekong.Entity.ListItem({ text: 'hello world', markup: [] });
-  var item2 = new Mekong.Entity.ListItem({ text: 'substance' });
-
-  var list2 = new Mekong.Entity.List({ tag: 'ol' });
-  var item3 = new Mekong.Entity.ListItem({ text: 'what a day', markup: [
-    ['strong', 0, 4]
-  ] });
-
-  root.appendEntity(list1);
-  list1.appendEntity(item1);
-  list1.appendEntity(item2);
-  item1.appendEntity(list2);
-  list2.appendEntity(item3);
-
-  //console.log(paragraph)
-  paragraph.update({ text: 'yay!', markup: [['strong', 0, 4]] }).rollback();
-  var deleteOp = paragraph1.replaceWith(paragraph)//.rollback();
-  //paragraph.moveBefore(paragraph1).rollback()
-
-  // Table
-  // Внутри таблицы есть представление в виде JSON всех её
-  // ячеек и т.д. И так в каждой сущности.
-  var table = new Mekong.Entity.Table({ caption: 'fuck' });
-  var row = table.addRow();
-  var cell = row.addCell({})
-  cell.update({});
-  table.updateCell('cellId', {})
-  table.updateRow('rowId', {})
-  //var cell1 = Mekong.Entity.TableCell({ text: 'cell1' });
-  //var cell2 = Mekong.Entity.TableCell({ text: 'cell1' });
-  //var cell3 = Mekong.Entity.TableCell({ text: 'cell1' });
-
-  root.appendEntity(table);
-
-  //table.appendEntity(cell1);
-  //table.appendEntity(cell2);
-  //table.appendEntity(cell3);
-*/
-  /*
-  var api = new Mekong.Api;
-
-
-  let container = api.operate('Insert', 'RootContainer', {}, document.getElementById('body')).result;
-
-  // List
-  let listEntity = api.operate('Insert', 'List', { tag: 'ol' }, container).result;
-  let listItemEntity = api.operate('Insert', 'ListItem', { text: 'hello world', markup: [] }, listEntity).result;
-  let listItemEntity1 = api.operate('Insert', 'ListItem', { text: 'what a day', markup: [] }, listEntity).result;
-  let listItemEntity2 = api.operate('Insert', 'ListItem', { text: 'substance', markup: [] }, listItemEntity).result;
-
-  // Table
-  let tableEntity = api.operate('Insert', 'Table', {}, container).result;
-  let tableRow = api.operate('Insert', 'TableRow', {}, tableEntity).result;
-
-  let tableCell1 = api.operate('Insert', 'TableCell', { text: 'cell 1', tag: 'th', markup: [] }, tableRow).result;
-  let tableCell2 = api.operate('Insert', 'TableCell', { text: 'cell 2', tag: 'th', markup: [] }, tableRow).result;
-  let tableCell3 = api.operate('Insert', 'TableCell', { text: 'cell 3', tag: 'th', markup: [] }, tableRow).result;
-
-  // Definition list
-  let dlEntity = api.operate('Insert', 'DefinitionList', {}, container).result;
-  let dlEntry = api.operate('Insert', 'DefinitionListEntry', {
-    term: {
-      text: 'Monday',
-      markup: []
-    },
-    description: {
-      text: 'First day of a week',
-      markup: []
-    }
-  }, tableEntity).result;
-
-  api.operate('Update', dlEntry, {
-    term: { text: 'Monday - hard day' }
-  });
 
   // Grid
   let gridEntity = api.operate('Insert', 'Grid', {}, container).result;
