Undo/redo improvements

--- a/stage.html
+++ b/stage.html
@@ -63,10 +63,13 @@
   var p1 = mekong.entity('Paragraph', { tag: 'p', attrs: {} });
   p1.setText('Hello world!')
   p1.setText('Yay!')
-  p1.setText('Lol!')
-  p1.setTag('blockquote')
-  p1.setMarkup('strong', 0, 2)
+  //p1.setText('Lol!')
+  //p1.setTag('blockquote')
+  //p1.setMarkup('strong', 0, 2)
   mekong.undo()
+  mekong.undo()
+
+  //mekong.redo()
   //mekong.entities.undoManager.undo()
 
   //mekong.entities.undoManager.redo()
