Improve Entity interface, rename Entities to Document

--- a/stage.html
+++ b/stage.html
@@ -63,11 +63,14 @@
   var p1 = mekong.entity('Paragraph', { tag: 'p', attrs: {} });
   p1.setText('Hello world!')
   p1.setText('Yay!')
+
+  //mekong.entities.remove(p1)
   //p1.setText('Lol!')
   //p1.setTag('blockquote')
   //p1.setMarkup('strong', 0, 2)
+  //mekong.undo()
   mekong.undo()
-  mekong.undo()
+  //mekong.redo()
 
   //mekong.redo()
   //mekong.entities.undoManager.undo()
