--- a/stage.html
+++ b/stage.html
@@ -48,11 +48,14 @@
   mekong.useEntity('List');
   mekong.useEntity('Grid');
   mekong.useEntity({ Image: function(core) {} });
-/*
+
   // A List
-  var list = mekong.create('List', { tag: 'ol' });
+/*  var list = mekong.create('List', { tag: 'ol' });
   var item1 = list.createItem();
   item1.setText('item 1');
+
+  mekong.document.undo()
+  mekong.document.redo()
 
   var item1_1 = item1.createItem();
   item1_1.setText('item 1.1');
@@ -69,12 +72,12 @@
   var item1_2_1 = item1_2.createItem();
   item1_2_1.setText('item 1.2.1');
 
-
   mekong.document.undo()
   mekong.document.undo()
   mekong.document.redo()
   mekong.document.redo()
 */
+
   // A Table
   /*var table = mekong.create('Table');
   var row1 = table.addRow();
@@ -88,14 +91,16 @@
 
 
   // A paragraph
-  var p1 = mekong.create('Paragraph', { tag: 'p', text: 'Hello world!', attrs: {} });
-  //p1.setText('Hello world!')
+  var p1 = mekong.create('Paragraph', { tag: 'p', attrs: {} });
+  p1.setText('Hello world!')
+  p1.setAttr('id', 'lol');
+  p1.removeAttr('id')
   mekong.document.undo()
-  /*mekong.document.undo()
-  mekong.document.redo()
-  mekong.document.redo()
+  //mekong.document.undo()
+  //mekong.document.redo()
+  //mekong.document.redo()
 
-
+/*
   p1.setMarkup('strong', 0, 5)
   p1.setMarkup('em', 6, 11)
   p1.setMarkup('u', 4, 7)
