--- a/stage.html
+++ b/stage.html
@@ -43,11 +43,11 @@
   var Mekong = require('mekong').default;
   var mekong = new Mekong(document.getElementById('body'));
 
-  mekong.useEntity('Table');
-  mekong.useEntity('Paragraph');
-  mekong.useEntity('List');
-  mekong.useEntity('Grid');
-  mekong.useEntity({ Image: function(core) {} });
+  mekong.use('Table');
+  mekong.use('Paragraph');
+  mekong.use('List');
+  mekong.use('Grid');
+  mekong.use({ Image: function(core) {} });
 
   // A List
 /*  var list = mekong.create('List', { tag: 'ol' });
@@ -93,9 +93,19 @@
   // A paragraph
   var p1 = mekong.create('Paragraph', { tag: 'p', attrs: {} });
   p1.setText('Hello world!')
-  p1.setAttr('id', 'lol');
-  p1.removeAttr('id')
+
+  mekong.document.remove(p1)
   mekong.document.undo()
+  mekong.document.redo()
+
+  //var p2 = mekong.create('Paragraph', { tag: 'p', attrs: {} });
+  //p2.setText('Yellow world!')
+
+  //mekong.document.replace(p1, p2)
+  //p1.setAttr('id', 'lol');
+  //p1.removeAttr('id')
+  //mekong.document.undo()
+  //mekong.document.removeAll()
   //mekong.document.undo()
   //mekong.document.redo()
   //mekong.document.redo()
